[tool.poetry]
name = "em-db-parser"
version = "0.1.0"
description = ""
authors = ["Mikhail Egorov <pe.egorov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.5"
sqlalchemy = "^2.0.36"
pandas = "^2.2.3"
selectolax = "^0.3.26"
aiohttp = "^3.11.2"
asyncio = "^3.4.3"
python-dotenv = "^1.0.1"
asyncpg = "^0.30.0"
xlrd = "^2.0.1"
pandas-stubs = "^2.2.3.241009"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.2"
mypy = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
